tests/error_006_illegal_tag_name.test
START
agoodtag -abadtag
ERROR
.../error_006_illegal_tag_name.input:1:10: error: unexpected character "-" U+2D
agoodtag -abadtag
         ^
END
